--- a/.github/workflows/action1.yml
+++ b/.github/workflows/action1.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the action will run. 
 on:
   schedule:
-   - cron:  '50 * * * *'
+   - cron:  '58 * * * *'
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
@@ -13,7 +13,7 @@ on:
     branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  #workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
